[package]
name = "rambda"
description = "A Rust Lambda Calculus interpreter"
authors = [
    "Levi <leviiloviee@gmail.com>"
]
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tui = { version = "0.19.0", features = ["crossterm"] }
